# mas-ai

./: .gitignore  LICENSE  MANIFEST.in  README.md  local_setup.sh  main.py  masai.py  masai_requirements.txt  model_config.json  pyproject.toml  requirements.txt  test.py
MAS/Architecture/: basic_architecture.mmd  planner_architecture.mmd
custom_tools/: tools.py
docs/: ADVANCED.md  AGENTMANAGER_DETAILED.md  AGENT_DETAILED.md  API_REFERENCE.md  ARCHITECTURE.md  AUDIT_VISUAL_FLOWS.md  CALLBACK_SYSTEM_EXPLAINED.md  CONFIGURATION.md  CONTEXTVARS_IMPLEMENTATION_GUIDE.md  CONTEXTVARS_WITH_LONGTERM_MEMORY_CRUD.md  CONTEXT_MANAGEMENT_ANALYSIS.md  CURRENT_QUESTION_STATE.md  DATA_CONTEXT_MANAGEMENT.md  DOCUMENT_CLASS_GUIDE.md  DYNAMIC_RETURN_DIRECT.md  EMBEDDINGS_CONFIGURATION_GUIDE.md  EMBEDDINGS_PRACTICAL_EXAMPLES.md  EMBEDDINGS_QUICK_REFERENCE.md  EMBEDDINGS_TECHNICAL_REFERENCE.md  ENHANCED_STREAMING.md  FRAMEWORK_OVERVIEW.md  INSTALLATION.md  LANGCHAIN_AGNOSTIC_GUIDE.md  LONGTERM_MEMORY_CRUD_EXAMPLES.md  LONGTERM_MEMORY_CRUD_TOOL.md  MEMORY_SYSTEM.md  MODEL_CONFIG_COMPREHENSIVE.md  MODEL_CONFIG_GUIDE.md  MODEL_PARAMETERS.md  MULTIAGENT_SYSTEM_GUIDE.md  MULTI_AGENT_ORCHESTRATION.md  OMAN_GUIDE.md  PROVIDER_NAMES_QUICK_GUIDE.md  QUICK_START.md  REDIS_QDRANT_CRUD_GUIDE.md  SINGULAR_AGENT_GUIDE.md  STREAMING_COMPARISON_VISUAL.md  TOOLS_GUIDE.md  TROUBLESHOOTING.md  USAGE_GUIDE.md
src/mas_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mas_ai/AgentManager/: __init__.py
src/mas_ai/GenerativeModel/baseGenerativeModel/: basegenerativeModel.py
src/mas_ai/MultiAgents/: MultiAgent.py
src/mas_ai/Tools/: __init__.py
src/mas_ai/Tools/utilities/: tokenGenerationTool.py
src/mas_ai/prompts/: prompt_templates.py
src/masai/AgentManager/: AgentManager.py
src/masai/Agents/: __init__.py  base_agent.py  singular_agent.py
src/masai/Config/: config.py
src/masai/GenerativeModel/: __init__.py  generativeModels.py  parameter_config.py
src/masai/GenerativeModel/baseGenerativeModel/: basegenerativeModel.py
src/masai/GenerativeModel/vanilla_wrappers/: __init__.py  base_chat_model.py  gemini_wrapper.py  openai_wrapper.py
src/masai/Memory/: InMemoryStore.py  LongTermMemory.py
src/masai/MultiAgents/: MultiAgent.py  TaskManager.py  __init__.py
src/masai/OMAN/: __init__.py  oman.py
src/masai/Tools/: Tool.py  ToolRegistry.py
src/masai/Tools/PARSERs/: json_parser.py
src/masai/Tools/logging_setup/: logger.py
src/masai/Tools/utilities/: cache.py  deduplication_utils.py  enhanced_streaming.py  streaming_events.py  tokenGenerationTool.py
src/masai/langgraph/: __init__.py  core.py  state.py
src/masai/langgraph/graph/: __init__.py  state.py
src/masai/prompts/: __init__.py  chat_prompt_template.py  prompt_templates.py
src/masai/prompts/Template/: template.py
src/masai/pydanticModels/: AnswerModel.py  omanModel.py
src/masai/schema/: __init__.py  document.py
src/masai_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/multi_agent_system_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
