[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masai_framework"
version = "0.1.0"  # Update this to a new version
authors = [{ name = "PILER", email = "mrpolymathematica@gmail.com" }]
description = "Multi-Agent System Framework for AI Agents built on LangGraph"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.67",
    "langchain==0.3.15",
    "langchain-community==0.3.15",
    "langchain-core==0.3.31",
    "pydantic>=2.0",
    "python-dotenv",
    "tqdm",
    "requests",
    "anthropic",
    "openai",
    "google-generativeai==0.8.4",
    "langchain-groq==0.2.3",
    "langchain-openai==0.3.2",
    "langchain-text-splitters==0.3.5",
    "langsmith",
    "beautifulsoup4",
    "arxiv",
    "wikipedia",
    "duckduckgo-search",
    "psycopg2",
    "tokenizers"
]

[project.optional-dependencies]
tools = []  # Temporarily empty until tools are reintroduced

[tool.setuptools]
package-dir = { "" = "src" }
# Define package discovery using an inline table
packages.find = { where = ["src"], include = ["masai*", "masai.*"], exclude = ["masai.Tools.baseTools*", "masai.Tools.searchTools*", "masai.Tools.InputOutputTools*", "masai.Tools.calendarTools*", "masai.Tools.emailTools*", "masai.Tools.visiontools*", "masai.Tools.utilities.platformData_utils*","masai.Tools.Vectorstore*"] }

[tool.setuptools.package-data]
masai = [
    "prompts/*.json",
    "GenerativeModel/**/*.py",
    "baseGenerativeModel/**/*.py"
]