[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masai_framework"
version = "0.1.2"  # Update this to a new version
authors = [{ name = "PILER", email = "mrpolymathematica@gmail.com" }]
description = "Multi-Agent System Framework for AI Agents built on LangGraph"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.67",
    "langchain==0.3.15",
    "langchain-community==0.3.15",
    "langchain-core==0.3.31",
    "pydantic>=2.0",
    "langchain-neo4j==0.3.0",
    "python-dotenv",
    "huggingface-hub==0.27.0",
    "tqdm",
    "requests",
    "anthropic==0.45.0",
    "openai==1.60.0",
    "ollama==0.4.4",
    "google-generativeai==0.8.4",
    "langchain-groq==0.2.3",
    "langchain-milvus==0.1.8",
    "pymilvus==2.5.4",
    "PyPDF2==3.0.1",
    "langchain-openai==0.3.2",
    "langchain-text-splitters==0.3.5",
    "langsmith",
    "beautifulsoup4",
    "langchain-google-community==2.0.4",
    "arxiv",
    "wikipedia",
    "duckduckgo-search",
    "psycopg2==2.9.10",
    "tokenizers==0.21.0",
    "neo4j",
    "langchain-google-genai==2.0.9",
    "json-repair==0.39.1",
    "pytz",
    "PyAutoGUI==0.9.54",
    "PyGetWindow==0.0.9",
    "sentence-transformers==3.4.0",
    "transformers==4.48.1",
    "spacy==3.8.4",
    "rank-bm25==0.2.2",
    "tenacity==8.5.0",
    "tiktoken==0.8.0",
    "langchain-experimental",
]

[project.optional-dependencies]
tools = []  # Temporarily empty until tools are reintroduced

[tool.setuptools]
package-dir = { "" = "src" }
# Define package discovery using an inline table
packages.find = {where = ["src"], include = ["masai*", "masai.*"], exclude = ["masai.Tools.tools*"]}

[tool.setuptools.package-data]
masai = [
    "GenerativeModel/**/*.py",
    "baseGenerativeModel/**/*.py"
]