[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masai_framework"
version = "0.4.0"  # Vanilla SDK wrappers for OpenAI and Gemini, streamlined dependencies
authors = [{ name = "PILER", email = "mrpolymathematica@gmail.com" }]
description = "Multi-Agent System Framework for AI Agents with Vanilla SDK Wrappers and Custom LangGraph"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Vanilla SDKs for AI providers (OpenAI and Google Gemini only)
    "openai>=2.6.0",
    "google-generativeai==0.8.5",

    # Core utilities
    "pydantic>=2.12.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "tenacity>=9.1.0",
    "tiktoken>=0.12.0",
    "colorama>=0.4.6",
    "json-repair>=0.39.1",
    "aiofiles>=25.1.0",
    "tqdm>=4.67.0",
    "numpy==1.26.4",
    "pandas>=2.3.3",

    # Redis support
    "redis>=6.4.0",

    # Basic utilities
    "networkx>=3.4.2"
]

# Note: MASAI is a basic building block framework for agents.
# LangChain dependencies have been removed - MASAI uses custom implementations.
# should be installed separately by users as needed.

[project.optional-dependencies]
tools = []  # Temporarily empty until tools are reintroduced

[tool.setuptools]
package-dir = { "" = "src" }
# Define package discovery using an inline table
packages.find = {where = ["src"], include = ["masai*", "masai.*"], exclude = ["masai.Tools.tools*"]}

[tool.setuptools.package-data]
masai = [
    "GenerativeModel/**/*.py",
    "baseGenerativeModel/**/*.py"
]